# linphone2016

./: AndroidManifest.xml  README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
submodules/bctoolbox/include/: CMakeLists.txt
submodules/belcard/: CMakeLists.txt
submodules/belcard/include/: CMakeLists.txt
submodules/belcard/src/: CMakeLists.txt  vcard_grammar.cpp
submodules/belcard/tester/: CMakeLists.txt
submodules/belcard/tools/: CMakeLists.txt
submodules/belle-sip/tester/afl/sip/: 401Unauthorized.txt  REGISTER.txt  SIP200RegSuccess.txt
submodules/belle-sip/tools/: carddav_http_query.c
submodules/belr/: CMakeLists.txt
submodules/belr/include/: CMakeLists.txt
submodules/belr/src/: CMakeLists.txt
submodules/belr/tools/: CMakeLists.txt  response.txt  vcardsample.txt
submodules/cmake-builder/builders/: mssilk.cmake
submodules/cmake-builder/builders/soci/: soci_libdir.patch
submodules/cmake-builder/configs/desktop/ms2_package/: WindowsSDKArchiver.cmake.in
submodules/linphone/coreapi/: carddav.c  vcard.cc  vcard.h  vcard_stubs.c
submodules/linphone/gtk/: update.c
submodules/linphone/java/common/org/linphone/core/: LinphoneCoreFactory.java
submodules/linphone/java/impl/org/linphone/core/: LinphoneCoreFactoryImpl.java
submodules/linphone/mediastreamer2/cmake/: FindSpeex.cmake
submodules/linphone/mediastreamer2/src/videofilters/: winvideo2.c
submodules/linphone/tester/: vcard_tester.c
submodules/mssilk/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  mssilk.iss.in  silk_dec.c  silk_enc.c
submodules/mssilk/sdk/: Makefile.am  patch_pic.diff
submodules/mswebrtc/: mswebrtc.iss.in
submodules/msx264/: CMakeLists.txt  NEWS  config.h.cmake  configure.ac
submodules/msx264/cmake/: FindX264.cmake
submodules/msx264/src/: CMakeLists.txt  msx264.c
